--- a/src/pug/mixins/home/landing/People.pug
+++ b/src/pug/mixins/home/landing/People.pug
@@ -7,4 +7,4 @@ mixin People
             p Our team of Happiness Engineers works remotely from 58 countries providing customer support across multiple time zones.
     .position-relative.text-center
       +Background({ attrs: { style: { "background": `url(${CWD}assets/img/gallery/people-bg-shape.png) no-repeat center bottom, url(${CWD}assets/img/gallery/people-bg-dot.png) no-repeat center bottom`} }, className: '' }) 
-      img.img-fluid.position-relative.z-index-1(src=`${CWD}assets/img/gallery/p.png` alt=''  )       
+      img.img-fluid.position-relative.z-index-1(src=`${CWD}assets/img/gallery/people.png` alt=''  )       
