--- a/src/pug/mixins/home/landing/Cta.pug
+++ b/src/pug/mixins/home/landing/Cta.pug
@@ -1,14 +1,14 @@
 mixin Cta
   section.py-0
     .container-fluid.px-0
-      .card.py-4.px-5.border-0.rounded-0.bg-primary
+      .card.py-4.border-0.rounded-0.bg-primary
         .card-body
           .row.flex-center
-            .col-lg-8.text-lg-end
-              h1.text-light.fw-bold WooCommerce - the most customizable eCommerce
+            .col-xl-9.d-flex.justify-content-center
+              h2.text-light.fw-bold WooCommerce - the most customizable eCommerce
                 br
                 |platform for building your online business.
 
-            .col-lg-4
+            .col-xl-3
               a.btn.btn-lg.btn-outline-light.rounded-pill(href='#')
                 | GET STARTED
