--- a/src/pug/mixins/home/landing/HeroSection.pug
+++ b/src/pug/mixins/home/landing/HeroSection.pug
@@ -1,12 +1,13 @@
 mixin HeroSection
-  section.py-0
-    +Background({ image: `${CWD}assets/img/illustrations/bg.png`, attrs: { style: { 'background-position': 'center top', 'background-size': 'cover'} }, className: '' })
+  section.py-0.bg-light-gradient
+    +Background({ image: `${CWD}assets/img/illustrations/hero-bg.png`, attrs: { style: { 'background-position': 'top right', 'background-size': 'contain'} }, className: '' })
     .container
-      .row.align-items-center.min-vh-100
-        .col-lg-6.col-md-5.order-md-1.py-6.py-md-4
-          img.img-fluid(src=`${CWD}assets/img/gallery/1.png`  alt='')  
-        .col-md-7.col-lg-6.pt-md-9.mt-lg-0.text-center.text-md-start
-          h1.display-1.fw-bold  Building exactly the
+      .row.align-items-center
+        .col-lg-6.col-md-5.order-md-1.pt-8
+          img.img-fluid(src=`${CWD}assets/img/gallery/hero.png`  alt='')  
+
+        .col-md-7.col-lg-6.text-center.text-md-start.pt-5.pt-md-9
+          h1.display-1.fw-bold Building exactly the
             br
             |eCommerce website you want.
           
