--- a/src/pug/mixins/home/landing/Testimonial.pug
+++ b/src/pug/mixins/home/landing/Testimonial.pug
@@ -1,25 +1,9 @@
-//- mixin Items(config)
-//-   .col-md-4.mb-3.mb-md-0
-//-     .card.h-100
-//-       .card-body
-//-         .d-flex.justify-content-between.align-items-center
-//-           .d-flex.align-items-center
-//-             img(src=`${CWD}assets/img/gallery/${config.image}` alt='').img-fluid
-//-             .flex-1.ms-3
-//-               h6.mb-0.fs--1.text-1000.fw-medium=config.name 
-//-               p.fs--2.fw-normal.mb-0=config.country
-//-           .d-flex.align-items-center
-//-             span.text-900.me-3=config.star
-//-             svg.bi.bi-star-fill(xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='#FEA250' viewBox='0 0 16 16')
-//-               path(d='M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z')    
-//-         p.card-text.pt-3=config.text
-
 mixin Testimonial
-  section.py-7
-    +Background({ image: `${CWD}assets/img/gallery/t-bg.png`, attrs: { style: { 'background-position': 'center center', 'background-size': 'contain',} }, className: '' }) 
+  section.py-7.bg-light-gradient
+    +Background({ image: `${CWD}assets/img/gallery/testimonial-bg.png`, attrs: { style: { 'background-position': 'center center', 'background-size': 'contain',} }, className: '' }) 
     .container
-      .row.flex-center
-        .col-auto.text-center.mb-5.z-index-1
+      .row.flex-center.mb-5
+        .col-auto.text-center
           h1.display-2.fw-bold Trusted by Agencies
             br
             span &amp; Store Owners
@@ -27,27 +11,26 @@ mixin Testimonial
         .col-12.col-md-9.col-lg-8.col-xl-7.col-xxl-6
           #carouselExampleControls.carousel.slide.carousel-fade(data-bs-ride='carousel')
             .carousel-inner.overflow-visible
-              .card.py-sm-6.px-sm-5.position-absolute.w-100.h-100.shadow-sm(style="transform: translateY(52px) scale(.9)")
-              .card.py-sm-6.px-sm-5.position-absolute.w-100.h-100.shadow-sm(style="transform: translateY(32px) scale(.934)")
-              .card.py-sm-6.px-sm-5.position-absolute.w-100.h-100.shadow-sm
+              .card.py-sm-6.px-sm-5.testimonial-card-shadow.shadow-sm(style="transform: translateY(52px) scale(.9)")
+              .card.py-sm-6.px-sm-5.testimonial-card-shadow.shadow-sm(style="transform: translateY(32px) scale(.934)")
+              .card.py-sm-6.px-sm-5.testimonial-card-shadow.shadow-sm
               .carousel-item.z-index-1.active
-                  .card.py-4.px-3.py-sm-6.px-sm-5.px-xl-7
-                    +Background({ image: `${CWD}assets/img/gallery/q.png`, attrs: { style: { 'background-position': 'center top', 'background-size': '150px',} }, className: 'mt-4' }) 
-                    .card-body.z-index-1
-                      p.card-text.fs-2.lh-base.text-center.text-400 No other eCommerce platform allows people to start for free and grow their store as their business grows. More importantly, WooCommerce doesn't charge you a portion of your profits as your business grows!
-                  
+                .card.py-4.px-3.py-sm-6.px-sm-5.px-xl-7
+                  +Background({ image: `${CWD}assets/img/gallery/q.png`, attrs: { style: { 'background-position': 'center top', 'background-size': '150px',} }, className: 'mt-4' }) 
+                  .card-body.z-index-1
+                    p.card-text.fs-2.text-center No other eCommerce platform allows people to start for free and grow their store as their business grows. More importantly, WooCommerce doesn't charge you a portion of your profits as your business grows!
+                
               .carousel-item.z-index-1
                 .card.py-4.px-3.py-sm-6.px-sm-5.px-xl-7
                   +Background({ image: `${CWD}assets/img/gallery/q.png`, attrs: { style: { 'background-position': 'center top', 'background-size': '150px', 'height': '168px',} }, className: 'mt-4' }) 
                   .card-body.z-index-1
-                    p.card-text.fs-2.lh-base.text-center.text-400 No other eCommerce platform allows people to start for free and grow their store as their business grows. More importantly, WooCommerce doesn't charge you a portion of your profits as your business grows!
+                    p.card-text.fs-2.text-center WooCommerce doesn't charge you a portion of your profits as your business grows! No other eCommerce platform allows people to start for free and grow their store as their business grows. More importantly
               .carousel-item.z-index-1
                 .card.py-4.px-3.py-sm-6.px-sm-5.px-xl-7
                   +Background({ image: `${CWD}assets/img/gallery/q.png`, attrs: { style: { 'background-position': 'center top', 'background-size': '150px', 'height': '168px',} }, className: 'mt-4' }) 
                   .card-body.z-index-1
-                    p.card-text.fs-2.lh-base.text-center.text-400 More importantly, WooCommerce doesn't charge you a portion of your profits as your business grows! No other eCommerce platform allows people to start for free and grow their store as their business grows
+                    p.card-text.fs-2.text-center More importantly, WooCommerce doesn't charge you a portion of your profits as your business grows! No other eCommerce platform allows people to start for free and grow their store as their business grows
               
-            
             .row.mt-7.pe-6
               .col-12.position-relative.text-end
                 a.carousel-control-prev(href='#carouselExampleControls' role='button' data-bs-slide='prev')
