--- a/src/scss/theme/helpers/_background.scss
+++ b/src/scss/theme/helpers/_background.scss
@@ -59,3 +59,9 @@
   }
 }
 
+//- testimonial background
+
+.bg-light-gradient {
+  background: linear-gradient(180deg, rgba(236, 240, 253, 0) 0%, rgba(236, 240, 253, 0.53) 14.32%, #ECF0FD 45.83%, rgba(236, 240, 253, 0.43) 84.33%, rgba(236, 240, 253, 0) 100%);
+}
+
