--- a/src/pug/mixins/home/landing/Cta.pug
+++ b/src/pug/mixins/home/landing/Cta.pug
@@ -9,6 +9,6 @@ mixin Cta
                 br
                 |platform for building your online business.
 
-            .col-xl-3
+            .col-xl-3.text-center
               a.btn.btn-lg.btn-outline-light.rounded-pill(href='#')
                 | GET STARTED
