--- a/src/pug/mixins/home/landing/Features.pug
+++ b/src/pug/mixins/home/landing/Features.pug
@@ -2,7 +2,7 @@ mixin Features
   +Section.py-6
     .row.flex-center
       .col-auto.text-center.my-4
-        h1.display-2.fw-bold Your eCommerce
+        h1.display-3.fw-bold Your eCommerce
           br
           span made simple
     .row  
@@ -11,18 +11,18 @@ mixin Features
         .mt-3.text-center.text-md-start
           h4.display-6.fs-4.fs-md-2.fs-lg-3.fw-bold All You Need to Start
           p.mb-0 Add WooCommerce plugin to any WordPress site and set up a new store in minutes.
-          a.btn.btn-link.ps-0(type='button')  Ecommerce  Wordpress ›
+          a.btn.btn-link.ps-0(href='#' role='button')  Ecommerce  Wordpress ›
       .col-md-4.mb-5.mb-md-0
         img.img-fluid.shadow-sm(src=`${CWD}assets/img/gallery/feature-2.png`  alt='')   
         .mt-3.text-center.text-md-start
           h4.display-6.fs-4.fs-md-2.fs-lg-3.fw-bold Customize and Extend
           p.mb-0 From subscriptions to gym classes to luxury cars, WooCommerce is fully customizable.
-          a.btn.btn-link.ps-0(type='button')  Browse Extensions › 
+          a.btn.btn-link.ps-0( href='#' role='button')  Browse Extensions › 
         
       .col-md-4.mb-5.mb-md-0
         img.img-fluid.shadow-sm(src=`${CWD}assets/img/gallery/feature-3.png`  alt='')   
         .mt-3.text-center.text-md-start
           h4.display-6.fs-4.fs-md-2.fs-lg-3.fw-bold Active Community
           p.mb-0 WooCommerce is one of the fastest-growing eCommerce communities. 
-          a.btn.btn-link.ps-0(type='button')  Check our Forums ›
+          a.btn.btn-link.ps-0(href='#' role='button')  Check our Forums ›
           
