--- a/src/pug/mixins/home/landing/HeroSection.pug
+++ b/src/pug/mixins/home/landing/HeroSection.pug
@@ -7,13 +7,13 @@ mixin HeroSection
           img.img-fluid(src=`${CWD}assets/img/gallery/hero.png`  alt='')  
 
         .col-md-7.col-lg-6.text-center.text-md-start.pt-5.pt-md-9
-          h1.display-1.fw-bold Building exactly the
+          h1.display-2.fw-bold Building exactly the 
             br
             |eCommerce website you want.
           
           p.mt-3.mb-4 WooCommerce is a customizable, open-source eCommerce platform built on WordPress.Get started quickly and make your way.
-          a.btn.btn-lg.btn-info.rounded-pill.me-2(href='#')
+          a.btn.btn-lg.btn-info.rounded-pill.me-2(href='#' role='button')
             | Start a New Store 
           span  or  
-          a.btn.btn-link.ps-1.ps-md-4.ps-lg-1(type='button')  Customize &amp; Extend ›
+          a.btn.btn-link.ps-1.ps-md-4.ps-lg-1(href='#' role='button')  Customize &amp; Extend ›
 
