--- a/src/pug/mixins/home/landing/Cta.pug
+++ b/src/pug/mixins/home/landing/Cta.pug
@@ -5,7 +5,7 @@ mixin Cta
       .card.py-4.border-0.rounded-0.bg-primary
         .card-body
           .row.flex-center
-            .col-xl-9.d-flex.justify-content-center
+            .col-xl-9.d-flex.justify-content-center.mb-3.mb-xl-0
               h2.text-light.fw-bold WooCommerce - the most customizable eCommerce
                 br
                 |platform for building your online business.
