--- a/src/pug/mixins/home/landing/HeroSection.pug
+++ b/src/pug/mixins/home/landing/HeroSection.pug
@@ -7,7 +7,7 @@ mixin HeroSection
           img.img-fluid(src=`${CWD}assets/img/gallery/hero.png`  alt='')  
 
         .col-md-7.col-lg-6.text-center.text-md-start.pt-5.pt-md-9
-          h1.display-2.fw-bold Building exactly the 
+          h1.display-2.fw-bold.fs-4.fs-md-5.fs-xl-6 Building exactly the 
             br
             |eCommerce website you want.
           
